# onboarding-marcin-dyjas

./: .gitignore  .pre-commit-config.yaml  .properties.yml  .sonarcloud.properties  README.md  mapping.json  package-lock.json  package.json  pyproject.toml  serverless.yml  setup.cfg
.github/: pull_request_template.md
docs/: openapi.yaml
docs/paths/: onboarding.yaml  ping.yaml  status.yaml  timestamps.yaml
onboarding_marcin_dyjas/: __init__.py  application.py  bootstrap.py  repositories.py
onboarding_marcin_dyjas/healthcheck/: handlers.py
onboarding_marcin_dyjas/onboarding/: handlers.py
serverless/: custom.yml  functions.yml  resources.yml
serverless/environments/: README.md  integration-au.yml  live-ca.yml  singletenant-test.yml  tdbank.yml  test-au.yml
serverless/variables/: README.md  integration-au.yml  integration.yml  live-au.yml  live-ca.yml  live-us.yml  live.yml  singletenant-test.yml  tdbank.yml  test-au.yml  test.yml
tests/: conftest.py
tests/healthcheck/: test_handlers.py
tests/onboarding/: test_handlers.py
